@@ -1,6 +1,11 @@
 0.9.5.dev1
 -------------------------------
 
+- implement and refine "devpi push" command.  It now accepts
+  two forms "user/name" for specifying an internal devpi index
+  and "pypi:REPONAME" for specifying a repository which must be
+  defined in a .pypirc file.
+  
 - remove spurious pdb.set_trace() in devpi install command when
   no pip can be found.
 
